# ssd-macos

./: .gitignore  README.md  pyproject.toml
bench/: bench.py  chat.py
ssd_macos/: __init__.py  config.py  llm.py  sampling_params.py
ssd_macos/engine/: __init__.py  kv_cache.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py  speculator_async.py  speculator_sync.py  step.py  verifier.py
ssd_macos/layers/: __init__.py  activation.py  attention.py  embed_head.py  layernorm.py  linear.py  rotary_embedding.py  sampler.py
ssd_macos/models/: __init__.py  model_loader.py  wrapper.py
