[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ssd-macos"
version = "0.1.0"
authors = [{ name = "Rohan Shah" }]
license = "MIT"
readme = "README.md"
description = "SSD (Speculative Speculative Decoding) ported to macOS Apple Silicon via MLX"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mlx>=0.24.0",
    "mlx-lm>=0.24.0",
    "transformers>=4.40.0",
    "numpy>=1.26.0",
    "safetensors>=0.4.0",
    "tqdm>=4.66.0",
    "huggingface_hub>=0.23.0",
    "tokenizers>=0.19.0",
]

[project.optional-dependencies]
bench = [
    "wandb>=0.17.0",
]

[project.urls]
Homepage = "https://github.com/tanishqkumar/ssd"

[tool.setuptools.packages.find]
where = ["."]
include = ["ssd_macos*"]
